--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
   },
   "homepage": "https://github.com/ryanef/cloudshare-backend#readme",
   "devDependencies": {
+    "aws-sdk": "^2.1091.0",
     "serverless": "2.4.0",
-    "serverless-appsync-plugin": "^1.12.1"
+    "serverless-appsync-plugin": "^1.12.1",
+    "serverless-iam-roles-per-function": "^3.2.0"
+  },
+  "dependencies": {
+    "chance": "^1.1.8"
   }
 }
